--- a/PaginaWeb/style.css
+++ b/PaginaWeb/style.css
@@ -1,428 +1,180 @@
-/* reset -------------------------- */
-html,
-body,
-div,
-ul,
-ol,
-li,
-dl,
-dt,
-dd,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-pre,
-form,
-dfn,
-del,
-p,
-blockquote,
-fieldset,
-input,
-textarea,
-select,
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-nav,
-section,
-button,
-canvas,
-video {
-    margin: 0;
-    padding: 0;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-pre,
-code,
-address,
-caption,
-cite,
-code,
-th,
-dfn,
-del {
-    font-weight: normal;
-    font-style: normal;
-}
-ul,
-ol {
-    list-style: none;
-}
-fieldset,
-img {
-    border: none;
-}
-caption,
-th {
-    text-align: left;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-input[type="button"],
-input[type="submit"],
-input[type="reset"],
-button {
-    cursor: pointer;
-    line-height: normal;
-}
-button,
-input {
-    line-height: normal;
-}
-input[type="hidden"],
-[hidden],
-.hidden {
-    display: none;
-}
-textarea {
-    overflow: auto;
-    resize: none;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-nav,
-section,
-.clearfix {
-    display: block;
-}
-audio,
-canvas,
-video {
-    display: inline-block;
-}
-p {
-    font-family: 'Courier New', Courier, monospace;
-}
-a > img {
-    vertical-align: bottom;
-}
-strong,
-b {
-    font-weight: bold;
-}
-em,
-i {
-    font-style: italic;
-}
-del {
-    text-decoration: line-through;
-}
-:focus {
-    outline: none;
-}
-
-
-/* tools -------------------------- */
-.clear {
-    clear: both;
-    display: block;
-    line-height: 0;
-    height: 0;
-    font-size: 0;
-}
-.clearfix:after,
-.wrap:after,
-aside:after,
-section:after,
-article:after,
-.text:after {
-    content: ".";
-    display: block;
-    clear: both;
-    visibility: hidden;
-    line-height: 0;
-    height: 0;
-    font-size: 0;
-}
-.align-left {
-    float: left !important;
-}
-.align-right {
-    float: right !important;
-}
-.overflow-hidden {
-    overflow: hidden;
-    display: block;
-}
-
-
-/* common -------------------------- */
-html {
-    height: 100%;
-    background: #ffffff;
-}
-body {
-    height: 100%;
-    font: 17px/26px "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #6a6a6a;
-    -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-}
-.main {
-    min-height: 100%;
-    overflow: hidden;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-.wrap {
-    margin: 0 auto;
-    max-width: 940px;
+body{
+    margin: 0px;
     padding: 0px;
 }
-a {
-    color: #26a6d1;
-    cursor: pointer;
-    -moz-transition: color 0.15s linear;
-    -o-transition: color 0.15s linear;
-    -webkit-transition: color 0.15s linear;
-    transition: color 0.15s linear;
-}
-a:hover {
-    color: #1e85a7;
-}
-.error {
-    color: #FF0000 !important;
-    border-color: #FF0000 !important;
-}
 
-.disabled {
-    color: #999999 !important;
-    border-color: #999999 !important;
-    cursor: default !important;
-}
-.social li a,
-.ico-help,
-.ico-like,
-.ico-present,
-.istore a:after {
-    background: url(images/sprite.png) no-repeat 0 0;
-}
-h1, h2, h3, h4, h5, h6 {
-    color: #324d5b;
-}
-h1, h2, h3 {
-    font-size: 30px;
-    line-height: 40px;
-    margin: 0 0 22px;
-}
-img {
-    max-width: 100%;
-    height: auto;
-}
+.arriba{
+    background: rgba(10, 149, 173, 0.938);
+    height: 70vh;
 
-
-/* header -------------------------- */
-header {
-    padding: 69px 0;
 }
-header .logo {
-    float: left;
-}
-header .logo a {
-    display: inline-block;
-}
-.social {
-    float: right;
-    padding: 2px 0px;
-}
-.social li {
-    float: left;
-    margin: 0 0 0 22px;
-}
-.social li a {
-    display: block;
-    width: 48px;
-    height: 48px;
-    text-indent: -9999px;
-    background-color: #3b5998;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    -moz-transition: background-color 0.2s linear;
-    -o-transition: background-color 0.2s linear;
-    -webkit-transition: background-color 0.2s linear;
-    transition: background-color 0.2s linear;
-}
-.social li a.social-facebook {
-    background-position: 0 0;
-}
-
-
-/* footer -------------------------- */
-footer {
-    padding: 90px 0;
-}
-footer .logo {
-    float: left;
-    margin: 0 95px 0 0;
-}
-footer .logo img {
-    display: block;
-}
-.istore {
-    float: left;
-    position: relative;
-    line-height: 36px;
+.titulo{
+    color: aliceblue;
+    font-family: cursive;
     text-align: center;
-    margin: 8px 62px 8px 0;
+    font-size: 60px;
 }
-.istore a {
-    position: relative;
-    display: inline-block;
-    line-height: 36px;
-    font-size: 14px;
-    padding: 0 0 0 47px;
-}
-.istore a:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-color: #eba953;
-    background-position: -150px 0;
-    width: 36px;
-    height: 36px;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    -moz-transition: background-color 0.15s linear;
-    -o-transition: background-color 0.15s linear;
-    -webkit-transition: background-color 0.15s linear;
-    transition: background-color 0.15s linear;
-}
-.istore:hover:after {
-    background-color: #1e85a7;
-}
-.copy {
-    float: left;
-    font-size: 14px;
-    line-height: 36px;
-    margin: 8px 0;
-}
-.copy a {
-    color: #3db39e;
-    font-weight: bold;
-}
-.copy a:hover {
-    color: #318f7e;
-}
-
-
-/* sidebar -------------------------- */
-.sidebar {
+.slogan{
+    color: aliceblue;
+    font-family: monospace;
+    text-align: center;
+    font-size: 25px;
     
 }
-
-
-/* content -------------------------- */
-.simple {
-    text-align: center;
-    padding: 107px 0 95px;
+.contenedor{
+    
+    display:flex;
+    justify-content: center;
+  
 }
-.simple p {
-    margin: 0 60px 16px;
+.img-1{
+    
+    margin-right: 50px;
 }
-.promo {
+.img-2{
+    padding-top: 10px;
+    margin-right: 50px;
+}
+.img-3{
+    
+    margin-right: 50px;
+}
+  
+.abajo{
     background: #f1c051;
-    color: #ffffff;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-.promo .wrap {
-    position: relative;
-    min-height: 634px;
+
+
+.img-4{
+    
+    margin-top: -70px;
+    align-items: center;
+    
 }
-.promo-text {
-    width: 460px;
-    height: 634px;
-    display: table-cell;
-    vertical-align: middle;
-    font-size: 18px;
-    line-height: 30px;
+.LanaByte {
+    margin-top: 20px;
+    font-family: cursive;
+    color: aliceblue;
+    font-size: large;
+    clear: both;
+    font-size: 15px;
+  }
+
+  .abajo h1 {
+    margin-top: 40px;
+    color: aliceblue;
+    font-family: monospace;
+    font-size: 15px;
+  }
+
+  .video-funcionamiento{
+    margin-top: 20px;
+    background: black;
+    height: 8vh;
+    margin-bottom: 20px;
+  }
+
+  .titulo-2{
+    font-family: cursive;
+    color: aliceblue;
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .funcionamiento {
+    width: 120px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-500%);
+    margin-top: 760px;
+    z-index: 1;
+  }
+
+  .video {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
 }
-.promo-text p {
-    padding: 35px 0 0;
-}
-.promo .wrap img {
-    position:absolute;
-    bottom: 0;
-    right: -20px;
-    top: 50%;
-    transform: translateY(-50%);
-}
-.promo-title {
-    font-size: 55px;
-    line-height: 60px;
-    font-weight: bold;
-}
-.promo-button {
-    display: inline-block;
-    white-space: nowrap;
-    height: 52px;
-    line-height: 52px;
-    font-weight: bold;
+.redes {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+  
+  .wstpp {
     font-size: 20px;
-    text-decoration: none;
-    padding: 0 30px;
-    background: #ffffff;
-    text-transform: uppercase;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    -moz-transition: all 0.15s linear;
-    -o-transition: all 0.15s linear;
-    -webkit-transition: all 0.15s linear;
-    transition: all 0.15s linear;
-}
-.promo-button:hover {
-    background-color: #e2f9f5;
-    color: #eba953;
-}
-.promo-button:active {
-    color: #eba953;
-    background-color: #e2f9f5;
-    -moz-box-shadow: inset 0 2px 0 rgba(0,0,1,.1);
-    -webkit-box-shadow: inset 0 2px 0 rgba(0,0,1,.1);
-    box-shadow: inset 0 2px 0 rgba(0,0,1,.1);
-}
-.promo-link {
-    color: #ffffff;
+    margin-right: 10px;
+    color: rgba(10, 149, 173, 0.938);
+    font-family: cursive;
+  }
+  
+  .social-whatsapp {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #25d366;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .social-whatsapp:hover {
+    transform: scale(1.1);
+  }
+  .contenedor-qs {
+    display: flex;
+    justify-content: center;
+    }
+    
+    .Quienes-Somos {
+    background-color: rgba(10, 149, 173, 0.938);
+    border-radius: 8px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 0 20px;
+    width: 700px;
+    height: 190px;
+    align-items: center;
+    }
+  .comillas{
+    width: 120px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-300%);
+    margin-top: 1580px;
+    z-index: 1;
+  }
+    .comillasc{
+        width: 120px;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(220%);
+        margin-top: 1810px;
+        z-index: 1;
+  }
+  .texto {
     font-size: 20px;
-    line-height: 52px;
-    font-weight: bold;
-    margin: 0 0 0 35px;
-    text-transform: uppercase;
-    white-space: nowrap;
-}
-.promo-link:hover {
-    color: #c9f9f0;
-}
-@media (max-width: 479px){
-    body {
-        word-wrap: break-word;
-    }
-    .simple p {
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
+    line-height: 1.6;
+    font-family:cursive;
+  }
+
+  .Final{
+    padding-top: 10px;
+    text-align: center;
+    color:#f1c051;
+    font-family: cursive;
+    font-size: 40px;
+  }
+
+
+  
