--- a/VentasMaven/src/main/java/Vista/Sistema.form
+++ b/VentasMaven/src/main/java/Vista/Sistema.form
@@ -166,7 +166,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="LabelVendedor">
           <Properties>
-            <Property name="text" type="java.lang.String" value="LANA Byte"/>
+            <Property name="text" type="java.lang.String" value="Empresa"/>
           </Properties>
         </Component>
       </SubComponents>
@@ -179,11 +179,11 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Comic Sans MS" size="36" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="                Punto de Venta"/>
+        <Property name="text" type="java.lang.String" value="VENTAS"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="170" y="0" width="770" height="80"/>
+          <AbsoluteConstraints x="480" y="0" width="180" height="80"/>
         </Constraint>
       </Constraints>
     </Component>
